[gd_scene load_steps=2 format=3 uid="uid://bwkjry8wqheat"]

[ext_resource type="Script" uid="uid://cs5jyeeyesmqb" path="res://UI/level_win.gd" id="1_n3xi2"]

[node name="LevelWinMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3xi2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.590699, 0.590699, 0, 0.639216)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="LevelTimeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "00:00"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Medal: Gold"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Retry
"

[node name="ContinueButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Continue
"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit
"

[connection signal="pressed" from="GridContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GridContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
